update day1slides and syllabus

--- a/day1-slides-base.tex
+++ b/day1-slides-base.tex
@@ -83,7 +83,7 @@ Checkmarks may be earned as follows.
       to give you the chance to catch up on missed standards.
 \item {\bf Final Exam}: Your final opportunity to demonstrate mastery,
       cumulative over the entire course.
-\item {\bf Out-of-class Reattempts}: A limited number of oppotunities
+\item {\bf Out-of-class Reassessments}: A limited number of oppotunities
       will be provided to earn checkmarks outside of class.
 \end{itemize}
 
@@ -127,7 +127,7 @@ A & \begin{minipage}{0.6\textwidth}
 \item Complete 10 homework reports.
 \item \ifbool{TBL}{Have a 90\% Class Participation Score.}{Have an 80\% attendence record.} \\
 \end{itemize}
-\vspace{0.1em}\end{minipage} & OR &  45
+\vspace{0.1em}\end{minipage} & OR & 45 \checkmark{}s
 \\\hline
 B & \begin{minipage}{0.6\textwidth}~\vspace{0.1em}
 
@@ -136,7 +136,7 @@ B & \begin{minipage}{0.6\textwidth}~\vspace{0.1em}
 \item Complete 8 homework reports.
 \item \ifbool{TBL}{Have a 80\% Class Participation Score.}{Have an 80\% attendence record.} \\
 \end{itemize}
-\vspace{0.1em}\end{minipage} & OR & 40
+\vspace{0.1em}\end{minipage} & OR & 40 \checkmark{}s
 \\\hline
 C 	& \begin{minipage}{0.6\textwidth}~\vspace{0.1em}
 
@@ -145,7 +145,16 @@ C 	& \begin{minipage}{0.6\textwidth}~\vspace{0.1em}
 \item Complete 6 homework reports.
 \item \ifbool{TBL}{Have a 70\% Class Participation Score.}{Have an 80\% attendence record.} \\
 \end{itemize}
-\vspace{0.1em}\end{minipage} & OR & 35
+\vspace{0.1em}\end{minipage} & OR & 35 \checkmark{}s
+% \\\hline
+% D 	& \begin{minipage}{0.6\textwidth}~\vspace{0.1em}
+%
+% \begin{itemize}
+% \item Earn 20 mastery checkmarks.
+% \item Complete 4 homework reports.
+% \item \ifbool{TBL}{Have a 50\% Class Participation Score.}{Have an 50\% attendence record.} \\
+% \end{itemize}
+% \vspace{0.1em}\end{minipage} & OR & 25 \checkmark{}s
 \\
 
 \end{tabular}
@@ -156,10 +165,10 @@ C 	& \begin{minipage}{0.6\textwidth}~\vspace{0.1em}
 Homework is practice.
 \begin{itemize}
 \item I will not collect or grade homework problems.
-\item A list of suggested exercise for practice is in Sakai, sorted by standard.  You should work as many or as few of these as you need to master the material.
+\item A list of suggested exercise for practice is in USAOnline, sorted by standard.  You should work as many or as few of these as you need to master the material.
 \item \ifbool{TR}{\textbf{Caveat discipulus}:}{\textbf{Heads up!}} Most students do not work as many homework exercises as they should.
 \item If you need help or feedback, come to my office hours.
-\item I will collect homework reports each week (blank form in Sakai).
+\item I will collect homework reports each week (blank form in USAOnline).
 \end{itemize}
 \end{frame}
 
@@ -178,7 +187,7 @@ Homework is practice.
 
   \begin{frame}\frametitle{Readiness Assurance Process}
   \begin{itemize}
-  \item In Sakai, you will find a list of the skills you should have {\bf before each module starts}, along with a list of resources to help you prepare.
+  \item In USAOnline, you will find a list of the skills you should have {\bf before each module starts}, along with a list of resources to help you prepare.
   \begin{itemize}
   \item Sometimes these skills are from previous courses.
   \item Sometimes these skills are standards from earlier in this course.
