--- a/syllabus-base.tex
+++ b/syllabus-base.tex
@@ -70,7 +70,7 @@ below 80\%.
 
     This class is taught by a method called {\bf team-based learning}.  You will be assigned to a team that you will work with on various activities in class each day.  The course is divided into {\bf 6 modules}.
     \begin{itemize}
-    \item Before each module begins, {\bf you will be responsible for ensuring your own readiness for the module}.  A list of learning outcomes for the readiness assurance process is available in Sakai; you should be able to do each of these things before coming to class on the first day of the module.  Due to the cumulative nature of mathematics, some of these readiness assurance outcomes are topics from previous classes, and some are topics from earlier in this class.
+    \item Before each module begins, {\bf you will be responsible for ensuring your own readiness for the module}.  A list of learning outcomes for the readiness assurance process is available in USAOnline; you should be able to do each of these things before coming to class on the first day of the module.  Due to the cumulative nature of mathematics, some of these readiness assurance outcomes are topics from previous classes, and some are topics from earlier in this class.
     \item The first day of each module will be dedicated to the {\bf Readiness Assurance Process}.  The schedule for the readiness assurance days is
 
     \begin{center}
@@ -114,7 +114,7 @@ below 80\%.
 }
 
 \section*{\fontsize{12}{15}\selectfont Standards Based Grading}
-This course is graded by a methodology called {\bf standards based grading}.  Instead of receiving one percentage grade for an assessment, you will be assessed on whether or not you mastered individual {\bf learning standards}.  A list of these 23 standards is available in Sakai.  Your grade in the course will be based on how many of these standards you demonstrate mastery of.  {\bf On each standard, you will have the opportunity to earn up to two checkmarks; the total number of checkmarks you earn will determine your grade} (see below).
+This course is graded by a methodology called {\bf standards based grading}.  Instead of receiving one percentage grade for an assessment, you will be assessed on whether or not you mastered individual {\bf learning standards}.  A list of these 23 standards is available in USAOnline.  Your grade in the course will be based on how many of these standards you demonstrate mastery of.  {\bf On each standard, you will have the opportunity to earn up to two checkmarks; the total number of checkmarks you earn will determine your grade} (see below).
 
 
 \ifbool{TR}{
@@ -126,17 +126,17 @@ This course is graded by a methodology called {\bf standards based grading}.  In
     \item A \reattemptMark{} means you are eligible to {\bf Reassess} in my office hours.  You will earn this mark if you made a good faith attempt and demonstrated partial understanding, but did not demonstrate full mastery of that standard on this assessment.  You should work some more practice problems, and come by my office hours if you still do not understand.  You can either wait for the next quiz, or reassess during my office hours (see ``Reassessments'' below).
     \item A \noMark{} means there was {\bf No Significant Evidence} of understanding, and you are {\bf Not Eligible} for an office hours reassessment on this standard.  Your next attempt must come on an in-class assessment.
     \end{itemize}
-    Unfortunately, this grading system is far too sophisticated for Sakai's gradebook to handle.  So you will periodically receive an automatic email from me detailing your current progress in the course.  If you have any questions about how to interpret where you stand, come to my office hours to discuss.
+    Unfortunately, this grading system is far too sophisticated for USAOnline's gradebook to handle.  So you will periodically receive an automatic email from me detailing your current progress in the course.  If you have any questions about how to interpret where you stand, come to my office hours to discuss.
 
 
     \subsection*{\fontsize{10}{12}\selectfont Reassessment}
     You will have multiple opportunities to demonstrate mastery of each standard.  Your first opportunity will be on one of the daily quizzes.
     \begin{enumerate}[1)]
-    \item Each standard will show up on quizzes four times, beginning the class day after it is discussed in class (except, of course, standards that we cover in late November).  Usually these four appearances will be in subsequent weeks, but this is not a strict rule.  {\bf A detailed schedule listing when exactly which day each standard appears on quizzes is posted in Sakai.}
+    \item Each standard will show up on quizzes four times, beginning the class day after it is discussed in class (except, of course, standards that we cover in late November).  Usually these four appearances will be in subsequent weeks, but this is not a strict rule.  {\bf A detailed schedule listing when exactly which day each standard appears on quizzes is posted in USAOnline.}
     \item There will be a midterm in class on \ifbool{TR}{Tuesday, October 10}{Wednesday, October 11}, a semifinal assessment the last week of class, and the final exam.  The midterm will be an opportunity to demonstrate mastery on any standard from the first three modules, while the semifinal and final exam will have every standard available.
     \item Additionally, if you receive an R on a standard, you can come to my office to reassess the standard.  There are a few caveats to office hour reassessments:
     \begin{itemize}
-    \item In order to reassess a standard in my office, you must have completed additional practice problems and {\bf fill out a reassessment form} (blank forms are available in Sakai).
+    \item In order to reassess a standard in my office, you must have completed additional practice problems and {\bf fill out a reassessment form} (blank forms are available in USAOnline).
     \item \textbf{Office hour reassessments are given at the discretion of the instructor, they are not guaranteed opportunities. }
     \item \textbf{You can only reassess one standard per day} (or perhaps two closely related standards that can be assessed by a single problem).
     \item \textbf{There will be no office hours reassessments during the week of the midterm.}  I ask you to instead wait a few days and demonstrate mastery on the exam, so my office hour time during exam week can be devoted to answering questions helping everyone understand the new material.
@@ -152,13 +152,13 @@ This course is graded by a methodology called {\bf standards based grading}.  In
     \begin{itemize}
     \item \masteryMark{} means you successfully demonstrated mastery of that standard, so check off another box on your progress report!
     \item \minorMark{} means you made a minor mistake, unrelated to the standard being assessed; for example, if made a single arithmetic error while row reducing a matrix but did everything else correctly. If you rework the problem completely correctly \textbf{within one week}, this mark will be changed to \masteryMark{}, but after one week this mark will be counted as \reattemptMark{} instead.
-    \item \reattemptMark{} means you made a good faith attempt and demonstrated partial understanding, but did not demonstrate full mastery of that standard on this assessment. You are eligible to reattempt demonstrating mastery of this standard outside of class; see ``Reattempts'' below.
+    \item \reattemptMark{} means you made a good faith attempt and demonstrated partial understanding, but did not demonstrate full mastery of that standard on this assessment. You are eligible to reattempt demonstrating mastery of this standard outside of class; see ``Reassessments'' below.
     \item \noMark{} means there was {\bf No Significant Evidence} of understanding.
     \end{itemize}
-    Due to limitations in Sakai's gradebook, grades will only be available via occassional progress reports. You may request a new progress report during office hours as well.
+    Due to limitations in USAOnline's gradebook, grades will only be available via occassional progress reports. You may request a new progress report during office hours as well.
 
 
-    \subsection*{\fontsize{10}{12}\selectfont Out-of-class Reattempts}
+    \subsection*{\fontsize{10}{12}\selectfont Out-of-class Reassessments}
     Most \masteryMark{}s should be earned during in-class quizzes or exams;
     you only need to earn two for each standard, and most standards will be
     assessed on four quizzes, the midterm (if covered before midterm), and
@@ -167,7 +167,7 @@ This course is graded by a methodology called {\bf standards based grading}.  In
     During office hours most Wednesdays, you will be given the opportunity to
     improve up to two \reattemptMark{} to \masteryMark{} from different
     standards that you have not earned a \masteryMark{} within the past week.
-    You must bring a completed \textbf{Reattempt form} with several homework
+    You must bring a completed \textbf{Reassessment form} with several homework
     exercise solutions. After discussion of these solutions, if it appears you
     have likely mastered the standard,
     you will be given an additional exercise to take home and complete.
@@ -188,8 +188,8 @@ This course is graded by a methodology called {\bf standards based grading}.  In
 \section*{\fontsize{12}{15}\selectfont Assessments}
 There will be \ifbool{TBL}{four}{three} kinds of in class assessments:
 \begin{itemize}
-\ifbool{TBL}{\item As detailed above, there will be 6 iRATs and 6 tRATs; the dates for these are given above and listed in the assessment schedule in Sakai.}{}
-\item As mentioned above, {\bf each day we will have a quiz} in the last 15 minutes of class giving you opportunity to master several standards.  Note that you must have participated in class that day to be eligible to take the quiz.  A schedule listing which standards will appear on which quizzes is available in Sakai.
+\ifbool{TBL}{\item As detailed above, there will be 6 iRATs and 6 tRATs; the dates for these are given above and listed in the assessment schedule in USAOnline.}{}
+\item As mentioned above, {\bf each day we will have a quiz} in the last 15 minutes of class giving you opportunity to master several standards.  Note that you must have participated in class that day to be eligible to take the quiz.  A schedule listing which standards will appear on which quizzes is available in USAOnline.
 \item There will be a {\bf midterm exam on \ifbool{TR}{Tuesday, October 10}{Wednesday, October 11}} and a {\bf final exam on \ifbool{TR}{Thursday, December 7 at \ifbool{TBL}{10:30}{1:00}}{\ifbool{TBL}{Monday, December 4 at 6:00}{Wednesday, December 6 at 3:30}}}.
 \end{itemize}
 
@@ -255,7 +255,7 @@ F 	& \begin{minipage}{0.4\textwidth}
 
 
 \section*{\fontsize{12}{15}\selectfont Homework}
-The only way to learn mathematics is to do mathematics; for this reason, I will regularly provide you with homework problems.  \textbf{These are for your own practice.} You are not asked to hand these in for a grade.  Instead, you are expected to turn in a homework report each week (blank ones are available in Sakai).  In the report, you will list problems you've worked on for practice, and ones you are still having trouble with.  {\bf Homework reports are due every \ifbool{TR}{Thursday}{Wednesday} at the beginning of class.}  Late homework reports will not be accepted.
+The only way to learn mathematics is to do mathematics; for this reason, I will regularly provide you with homework problems.  \textbf{These are for your own practice.} You are not asked to hand these in for a grade.  Instead, you are expected to turn in a homework report each week (blank ones are available in USAOnline).  In the report, you will list problems you've worked on for practice, and ones you are still having trouble with.  {\bf Homework reports are due every \ifbool{TR}{Thursday}{Wednesday} at the beginning of class.}  Late homework reports will not be accepted.
 
 
 
