Fixed headers on readiness

--- a/course-notes.tex
+++ b/course-notes.tex
@@ -14,7 +14,7 @@
 \input{modules/6-G/index.tex} % 4 days
 
 %Produces PDFs of readiness materials
-\immediate\write18{readiness.bash}
+%\immediate\write18{readiness.bash}
 
 
 
