--- a/rat/6-g-rat.tex
+++ b/rat/6-g-rat.tex
@@ -2,12 +2,16 @@
 %% This is file, `6-g-rat.tex',
 %% generated with the extract package.
 %% 
-%% Generated on :  2017/08/15,12:11
+%% Generated on :  2017/08/15,12:57
 %% From source  :  readiness.tex
 %% Using options:  active,generate=rat/6-G-RAT.tex,extract-env={readinessAssuranceTest}
 %% 
 \documentclass{article}
  \usepackage{tbil-la,course-notes}
+\usepackage{xstring}
+%\let\Xfile\empty
+\StrBefore*{\jobname}{-rat}[\Xfile]
+\renewcommand{\header}{\expandafter\MakeUppercase\expandafter\Xfile}
 
 \begin{document}
 
