--- a/rat/1-e-rat.tex
+++ b/rat/1-e-rat.tex
@@ -2,17 +2,20 @@
 %% This is file, `1-e-rat.tex',
 %% generated with the extract package.
 %% 
-%% Generated on :  2017/08/15,12:11
+%% Generated on :  2017/08/15,12:57
 %% From source  :  readiness.tex
 %% Using options:  active,generate=rat/1-E-RAT.tex,extract-env={readinessAssuranceTest}
 %% 
 \documentclass{article}
  \usepackage{tbil-la,course-notes}
+\usepackage{xstring}
+%\let\Xfile\empty
+\StrBefore*{\jobname}{-rat}[\Xfile]
+\renewcommand{\header}{\expandafter\MakeUppercase\expandafter\Xfile}
 
 \begin{document}
 
 \begin{readinessAssuranceTest}
-
 \item Which of these graphs represents the following system of linear equations?
       \begin{align*}
       x+2y   &=   4 \\
