--- a/readiness-materials.tex
+++ b/readiness-materials.tex
@@ -2,19 +2,26 @@
 
 \usepackage{xstring}
 
-%Trying to get extract to extract RATs here--will fix Tuesday DL
 \let\Xfile\empty
 \StrBefore*{\jobname}{readiness}[\Xfile]
-\typeout{Xfile=\Xfile}
 \StrBetween[1,2]{\Xfile}{/}{/}[\Xfile]
-\typeout{Xfile=\Xfile}
 \edef\XXfile{rat/\Xfile -RAT.tex}
-\typeout{XXfile=\XXfile}
+
 \usepackage[active,generate=\XXfile,extract-env={readinessAssuranceTest}]{extract}
 
 \extractline* \usepackage{tbil-la,course-notes}
+
+\begin{extract}
+\usepackage{xstring}
+%\let\Xfile\empty
+\StrBefore*{\jobname}{-rat}[\Xfile]
+\renewcommand{\header}{\expandafter\MakeUppercase\expandafter\Xfile}
+\end{extract}
+
+\renewcommand{\header}{\Xfile}
 \begin{document}
 
 \input{\jobname.tex}
+
 
 \end{document}
