--- a/standards-base.tex
+++ b/standards-base.tex
@@ -1,13 +1,10 @@
-\documentclass{article}
-
-\usepackage{tbil-la}
 
 \usepackage[left=1in,right=1in,top=1in,bottom=1in]{geometry}
 \usepackage{enumerate,amssymb}
 
 \begin{document}
 \pagestyle{empty}
-\noindent \course \hfill \sem \hfill \prof
+\noindent Math 237 \hfill \sem \hfill \prof
 \vspace{0.3in}
 \hrule
 \begin{center}{\large \bf Linear Algebra Standards}\end{center}
