remove periods from assessment schedule

--- a/assessment-calendar-base.tex
+++ b/assessment-calendar-base.tex
@@ -71,26 +71,26 @@
 % schedule
 \caltexton{1}{First day--no assessments}
 \caltexton{2}{\RAT{E}}
-\caltexton{4}{E.1}
-\caltexton{5}{E.2}
-\caltexton{6}{\RAT{V} E.1,E.2,E.3,E.4}
-\caltexton{7}{E.2}
-\caltexton{8}{ E.1,E.2,E.3,E.4, V.1}
-\caltexton{10}{\RAT{S?} E.1,E.2,E.3,E.4, V.1}
+\caltexton{4}{E1}
+\caltexton{5}{E2}
+\caltexton{6}{\RAT{V} E1,E2,E3,E4}
+\caltexton{7}{E2}
+\caltexton{8}{ E1,E2,E3,E4, V1}
+\caltexton{10}{\RAT{S} E1,E2,E3,E4, V1}
 \caltexton{16}{\bf Midterm Exam}
 \caltexton{17}{\RAT{A}}
 
-\caltexton{19}{A.1,A.2}
-\caltexton{20}{A.3,A.4}
-\caltexton{21}{\RAT{M}  A.1,A.2}
-\caltexton{22}{A.3,A.4}
-\caltexton{23}{A.1,A.2,M.1}
-\caltexton{24}{A.3,A.4}
-\caltexton{25}{\RAT{G}  A.1,A.2,M.1,M.2,M.3}
-\caltexton{26}{A.3,A.4}
-\caltexton{27}{M.1,M.2,M.3}
-\caltexton{28}{M.1,M.2,M.3,G.1}
-\caltexton{29}{G.1,G.2,G.3}
+\caltexton{19}{A1,A2}
+\caltexton{20}{A3,A4}
+\caltexton{21}{\RAT{M}  A1,A2}
+\caltexton{22}{A3,A4}
+\caltexton{23}{A1,A2,M1}
+\caltexton{24}{A3,A4}
+\caltexton{25}{\RAT{G}  A1,A2,M1,M2,M3}
+\caltexton{26}{A3,A4}
+\caltexton{27}{M1,M2,M3}
+\caltexton{28}{M1,M2,M3,G1}
+\caltexton{29}{G1,G2,G3}
 
 
 
