skeleton module 3 day 1 notes

--- a/course-notes.sty
+++ b/course-notes.sty
@@ -89,13 +89,13 @@ Choose the most appropriate response for each question.
   \end{center}
 }
 
-\newenvironment{remark}[1]{
+\newenvironment{remark}{
   \begin{remarkRaw}
 }{
   \end{remarkRaw}
 }
 
-\newenvironment{fact}[1]{
+\newenvironment{fact}{
   \begin{factRaw}
 }{
   \end{factRaw}
