--- a/modules/3-S/index.tex
+++ b/modules/3-S/index.tex
@@ -15,7 +15,7 @@
         I can compute the dimension of a vector space.
 \end{moduleStandards}
 
-\input{modules/3-R/readiness.tex}
-\input{modules/3-R/day1.tex}
+\input{modules/3-S/readiness.tex}
+\input{modules/3-S/day1.tex}
 
 \end{module}
