--- a/rat/3-s-rat.tex
+++ b/rat/3-s-rat.tex
@@ -1,10 +1,10 @@
 %% 
-%% This is file, `3-r-rat.tex',
+%% This is file, `3-s-rat.tex',
 %% generated with the extract package.
 %% 
-%% Generated on :  2017/08/15,13:35
+%% Generated on :  2017/08/15,14:04
 %% From source  :  readiness.tex
-%% Using options:  active,generate=rat/3-R-RAT.tex,extract-env={readinessAssuranceTest}
+%% Using options:  active,generate=rat/3-S-RAT.tex,extract-env={readinessAssuranceTest}
 %% 
 \documentclass{article}
  \usepackage{tbil-la,course-notes}
