factor out courseSection from course - addresses #12

--- a/assessment-calendar-base.tex
+++ b/assessment-calendar-base.tex
@@ -8,7 +8,7 @@
 
 \begin{document}
 \pagestyle{empty}
-\noindent \course \hfill \sem \hfill \prof
+\noindent \course-\courseSection \hfill \sem \hfill \prof
 \vspace{0.3in}
 \hrule
 \begin{center}{\large \bf Assessment Calendar}\end{center}
