--- a/tbil-la.sty
+++ b/tbil-la.sty
@@ -117,7 +117,8 @@
 \newbool{TR}
 \newbool{TBL}
 
-\newcommand{\course}{Math 237-%
+\newcommand{\course}{Math 237}
+\newcommand{\courseSection}{%
   \ifbool{TR}{%
     \ifbool{TBL}{102}{103}%
   }{%
