Draft assessment schedule

--- a/assessment-calendar-base.tex
+++ b/assessment-calendar-base.tex
@@ -73,24 +73,30 @@
 \caltexton{2}{\RAT{E}}
 \caltexton{4}{E1}
 \caltexton{5}{E2}
-\caltexton{6}{\RAT{V} E1,E2,E3,E4}
+\caltexton{6}{\RAT{V} E1, (E2), E3, E4}
 \caltexton{7}{E2}
-\caltexton{8}{ E1,E2,E3,E4, V1}
-\caltexton{10}{\RAT{S} E1,E2,E3,E4, V1}
+\caltexton{8}{E1, (E2), E3, E4, V1}
+\caltexton{9}{(E2), V2}
+\caltexton{10}{\RAT{S} E1, (E2), E3, E4, V1}
+\caltexton{11}{(E2), V2}
+\caltexton{12}{V1, V3, V4, S1}
+\caltexton{13}{V2, S2}
+\caltexton{14}{V1, V3, V4, S1, S3}
+\caltexton{15}{V2, S2, S4}
 \caltexton{16}{\bf Midterm Exam}
-\caltexton{17}{\RAT{A}}
-
-\caltexton{19}{A1,A2}
-\caltexton{20}{A3,A4}
-\caltexton{21}{\RAT{M}  A1,A2}
-\caltexton{22}{A3,A4}
-\caltexton{23}{A1,A2,M1}
-\caltexton{24}{A3,A4}
-\caltexton{25}{\RAT{G}  A1,A2,M1,M2,M3}
-\caltexton{26}{A3,A4}
-\caltexton{27}{M1,M2,M3}
-\caltexton{28}{M1,M2,M3,G1}
-\caltexton{29}{G1,G2,G3}
+\caltexton{17}{\RAT{A} V3, V4, S1, S3}
+\caltexton{18}{S2, S4}
+\caltexton{19}{S1, S3, A1,A2}
+\caltexton{20}{S2, S4, A3,A4}
+\caltexton{21}{\RAT{M} S3, A1, A2}
+\caltexton{22}{S4, A3, A4}
+\caltexton{23}{A1, A2, M1}
+\caltexton{24}{A3, A4}
+\caltexton{25}{\RAT{G}  A1, A2, M1, M2, M3}
+\caltexton{26}{A3, A4}
+\caltexton{27}{M1, M2, M3}
+\caltexton{28}{M1, M2, M3, G1}
+\caltexton{29}{G1, G2, G3}
 
 
 
