--- a/modules/3-S/index.tex
+++ b/modules/3-S/index.tex
@@ -17,5 +17,8 @@
 
 \input{modules/3-S/readiness.tex}
 \input{modules/3-S/day1.tex}
+\input{modules/3-S/day2.tex}
+\input{modules/3-S/day3.tex}
+\input{modules/3-S/day4.tex}
 
 \end{module}
