reduce module S to three days

--- a/modules/3-S/day2.tex
+++ b/modules/3-S/day2.tex
@@ -18,7 +18,7 @@
   of basis vectors.
 \end{observation}
 
-\begin{activity}{15}
+\begin{activity}{10}
   (given four sets of general vectors, identify which are bases and which aren't)
 \end{activity}
 
@@ -42,9 +42,14 @@
   \)
 \end{fact}
 
-\begin{activity}{15}
+\begin{activity}{10}
   (given four sets of \(IR^5\) vectors, identify which are bases and which
   aren't)
+\end{activity}
+
+\begin{activity}{10}
+  How can \{u,v,u+v\} (but with numbers) be changed to make it
+  linearly independent?
 \end{activity}
 
 \end{applicationActivities}
