--- a/modules/3-S/day3.tex
+++ b/modules/3-S/day3.tex
@@ -4,11 +4,6 @@
 \begin{applicationActivities}{Day 3}
 
 \begin{activity}{10}
-  How can \{u,v,u+v\} (but with numbers) be changed to make it
-  linearly independent?
-\end{activity}
-
-\begin{activity}{10}
   (discover that the redundant vectors are non-pivot columns)
 \end{activity}
 
@@ -17,10 +12,6 @@
   simply remove the vectors corresponding to the non-pivot columns of
   \(\RREF[\vect v_1\,\dots\,\vect v_m]\).
 \end{fact}
-
-\begin{activity}{10}
-  (compute a basis)
-\end{activity}
 
 \begin{activity}{10}
   (find ALL the bases for span S that are subsets of S)
@@ -35,5 +26,41 @@
   then \(\{\vect w_1,\vect w_2\}\) is linearly dependent (assuming
   \(\vect w_1\not=\vect w_2\)).
 \end{activity}
+
+\begin{fact}
+  All bases for a vector space are the same size.
+\end{fact}
+
+\begin{definition}
+  The \term{dimension} of a vector space is given by the cardinality/size
+  of any basis for the vector space.
+\end{definition}
+
+\begin{activity}{10}
+  Reduce a bunch of spans to bases to find their dimension.
+\end{activity}
+
+\begin{activity}{5}
+  What is the dimension of the vector space of \(7\)th-degree polynomials
+  \(\P^7\)?
+\end{activity}
+
+\begin{activity}{5}
+  What is the dimension of the vector space of polynomials
+  \(\P\)?
+\end{activity}
+
+\begin{observation}
+  Several interesting vector spaces are infinite-dimensional:
+  \begin{itemize}
+    \item The space of polynomials \(\P\)
+    \item The space of real number sequences \(\IR^\infty\)
+    \item The space of continuous functions \(C(\IR)\)
+  \end{itemize}
+\end{observation}
+
+\begin{fact}
+  Every vector space with dimension \(n<\infty\) is isomorphic to \(\IR^n\).
+\end{fact}
 
 \end{applicationActivities}
