Finished assessment calendar

--- a/assessment-calendar-base.tex
+++ b/assessment-calendar-base.tex
@@ -32,23 +32,23 @@
 \options{8/15/2017}{\noclassday}
 
 \options{9/4/2017}{\noclassday}
-\caltext{9/4/2017}{Labor Day}
+\caltext{9/4/2017}{{\em Labor Day \\ \ifbool{TR}{}{No class} }}
 
 \options{10/12/2017}{\noclassday}
-\caltext{10/12/2017}{Fall Break}
-\caltext{10/13/2017}{Fall Break}
+\caltext{10/12/2017}{{\em Fall Break \\ \ifbool{TR}{No class}{} }}
+\caltext{10/13/2017}{{\em Fall Break}}
 
 \options{11/22/2017}{\noclassday}
-\caltext{11/22/2017}{Thanksgiving Break}
+\caltext{11/22/2017}{{\em Thanksgiving Break \\ \ifbool{TR}{}{No class}}}
 \options{11/23/2017}{\noclassday}
-\caltext{11/23/2017}{Thanksgiving}
-\caltext{11/24/2017}{Thanksgiving Break}
+\caltext{11/23/2017}{{\em Thanksgiving \\ \ifbool{TR}{No class}{}}}
+\caltext{11/24/2017}{{\em Thanksgiving Break} }
 
-\options{12/4/2017}{\noclassday \weeklytext{Finals Week}}
-\options{12/5/2017}{\noclassday \weeklytext{Finals Week}}
-\options{12/6/2017}{\noclassday \weeklytext{Finals Week}}
-\options{12/7/2017}{\noclassday \weeklytext{Finals Week}}
-\options{12/8/2017}{\noclassday \weeklytext{Finals Week}}
+\options{12/4/2017}{\noclassday \weeklytext{{\em Finals Week}}}
+\options{12/5/2017}{\noclassday \weeklytext{{\em Finals Week}}}
+\options{12/6/2017}{\noclassday \weeklytext{{\em Finals Week}}}
+\options{12/7/2017}{\noclassday \weeklytext{{\em Finals Week}}}
+\options{12/8/2017}{\noclassday \weeklytext{{\em Finals Week}}}
 
 \ifbool{TR}
 {
@@ -69,34 +69,35 @@
 }
 
 % schedule
-\caltexton{1}{First day--no assessments}
+\caltexton{1}{{\em First day of class}}
 \caltexton{2}{\RAT{E}}
+\caltexton{3}{No assessments}
 \caltexton{4}{E1}
 \caltexton{5}{E2}
 \caltexton{6}{\RAT{V} E1, (E2), E3, E4}
 \caltexton{7}{E2}
 \caltexton{8}{E1, (E2), E3, E4, V1}
 \caltexton{9}{(E2), V2}
-\caltexton{10}{\RAT{S} E1, (E2), E3, E4, V1}
-\caltexton{11}{(E2), V2}
-\caltexton{12}{V1, V3, V4, S1}
-\caltexton{13}{V2, S2}
-\caltexton{14}{V1, V3, V4, S1, S3}
-\caltexton{15}{V2, S2, S4}
+\caltexton{10}{ E1, (E2), E3, E4, V1}
+\caltexton{11}{\RAT{S} (E2), V2}
+\caltexton{12}{ V1, V3, V4}
+\caltexton{13}{V2, S1}
+\caltexton{14}{V1, V3, V4, S2}
+\caltexton{15}{\RAT{A} V2, S1, S3, S4}
 \caltexton{16}{\bf Midterm Exam}
-\caltexton{17}{\RAT{A} V3, V4, S1, S3}
-\caltexton{18}{S2, S4}
-\caltexton{19}{S1, S3, A1,A2}
-\caltexton{20}{S2, S4, A3,A4}
-\caltexton{21}{\RAT{M} S3, A1, A2}
-\caltexton{22}{S4, A3, A4}
-\caltexton{23}{A1, A2, M1}
-\caltexton{24}{A3, A4}
-\caltexton{25}{\RAT{G}  A1, A2, M1, M2, M3}
-\caltexton{26}{A3, A4}
-\caltexton{27}{M1, M2, M3}
-\caltexton{28}{M1, M2, M3, G1}
-\caltexton{29}{G1, G2, G3}
+\caltexton{17}{V3, V4, S2}
+\caltexton{18}{S1, S3, S4,  A1,A2}
+\caltexton{19}{S2, A3, A4}
+\caltexton{20}{\RAT{M} S3, S4, A1, A2}
+\caltexton{21}{ A3, A4}
+\caltexton{22}{A1, A2, M1}
+\caltexton{23}{A3, A4}
+\caltexton{24}{\RAT{G}  A1, A2, M1, M2, M3}
+\caltexton{25}{A3, A4}
+\caltexton{26}{M1, M2, M3}
+\caltexton{27}{G1}
+\caltexton{28}{M1, M2, M3, (G1), G2, G3}
+\caltexton{29}{G1, G3, G4}
 
 
 
