--- a/modules/5-M/readiness.tex
+++ b/modules/5-M/readiness.tex
@@ -3,9 +3,9 @@
 
 \begin{readinessAssuranceOutcomes}
 \item Compose functions of real numbers
-\item Solve systems of linear equations \standardList{E.3}
-\item Find the matrix corresponding to a linear transformation \standardList{A.1}
-\item Determine if a linear transformation is injective and/or surjective \standardList{A.3}
+\item Solve systems of linear equations \standardList{E3}
+\item Find the matrix corresponding to a linear transformation \standardList{A1}
+\item Determine if a linear transformation is injective and/or surjective \standardList{A3}
 \item Interpret the ideas of injectivity and surjectivity in multiple ways
 \end{readinessAssuranceOutcomes}
 
