--- a/modules/3-S/readiness.tex
+++ b/modules/3-S/readiness.tex
@@ -5,7 +5,7 @@
 \item Add Euclidean vectors and multiply Euclidean vectors by scalars.
 \item Perform basic manipulations of augmented matrices and linear
 systems \standardList{E1,E2,E3}.
-\item Apply linear combinations and spanning sets \standardList{V2}.
+\item Apply linear combinations and spanning sets \standardList{V2,V3}.
 \end{readinessAssuranceOutcomes}
 
 \begin{readinessAssuranceResources}
