--- a/modules/4-A/readiness.tex
+++ b/modules/4-A/readiness.tex
@@ -3,9 +3,9 @@
 
 \begin{readinessAssuranceOutcomes}
 \item Solve a system of linear equations (including finding a basis of the solution space if it is homogeneous) by interpreting as an augmented matrix and row reducing \standardList{E1, E2, E3, E4}.
-\item State the definition of linear independence, and determine if a set of vectors is linearly dependent or independent \standardList{V5}.
-\item State the definition of a spanning set, and determine if a set of vectors spans a vector space or subspace \standardList{V6, V7}.
-\item State the definition of a basis, and determine if a set of vectors is a basis \standardList{V8, V9}.
+\item State the definition of a spanning set, and determine if a set of vectors spans a vector space or subspace \standardList{V3}.
+\item State the definition of linear independence, and determine if a set of vectors is linearly dependent or independent \standardList{S1}.
+\item State the definition of a basis, and determine if a set of vectors is a basis \standardList{S2}.
 \end{readinessAssuranceOutcomes}
 
 \begin{readinessAssuranceResources}
