--- a/syllabus-base.tex
+++ b/syllabus-base.tex
@@ -90,11 +90,11 @@ below 80\%.
 
     \item On the other class days, you will work with your teammates on a series of activities designed to guide you through discovering the course material.
 
-    \item Part of your class participation score will be determined by the {\bf peer evaluation} process.  At midterm and at final, you will fill out a Google Forms survey evaluating your peers and providing them feedback.  You will receive the anonymous feedback from your teammates, as well as a score that is the average of your teammates' evaluation of you.
+    \item Part of your class participation score will be determined by the {\bf peer evaluation} process.  At midterm and at final, you will fill out a Google Forms survey evaluating your peers on a scale of 1 to 5 for several questions decided by the class on the first day. Your average score score out of 5 will be mulitplied by \(25\%\) (so a 4/5 average counts as 100\%), and multiplied by a fraction between 0 and 1 based on the instructor's assessment of how fairly you completed the survey. (Any scores higher than 100\% will be counted as only 100\%.)
 
-    Additionally, I will give you a multiplier score based on the quality of your feedback to your peers.  This number will be 100\% for any student that makes a good faith effort to fairly evaluate their peers.  This multiplier will be multiplied by your evaluation score as determined by your teammates.
+    You will receive written feedback given by your peers on the midterm survey in an anonymized form, to help you maximize your future contributions to the team.
 
-    The questions for the peer evaluation will be determined by the class on the first day.
+    Your finalized Peer Evaluation score is given by the average of both surveys, or just the final survey, whichever is higher.
 
     \item Your {\bf Class Participation Score} will be determined by a weighted average of the following four items.  The weights will be determined by the class on the first day
 
