clarify no assessments in lecture on second day of class

--- a/assessment-calendar-base.tex
+++ b/assessment-calendar-base.tex
@@ -70,7 +70,7 @@
 
 % schedule
 \caltexton{1}{{\em First day of class}}
-\caltexton{2}{\RAT{E}}
+\caltexton{2}{\RAT{E}\ifbool{TBL}{}{No assessments}}
 \caltexton{3}{No assessments}
 \caltexton{4}{E1}
 \caltexton{5}{E2}
