tweak reassessment form, fix Office Hours

--- a/reassessment-form-base.tex
+++ b/reassessment-form-base.tex
@@ -26,7 +26,7 @@
 \vspace{0.15in}
 {\bf Standard: } \underline{\phantom{xxxxxxxxxxxxxxxxxxx}} \\
 \vspace{0.15in}
-{\bf Assessment on which you earned \ifbool{TR}{an R}{a !}: } \underline{\phantom{xxxxxxxxxxxxxxxxxxxxxxxxxxxxx}} \\
+{\bf Assessment marked with \reattemptMark{}: } \underline{\phantom{xxxxxxxxxxxxxxxxxxxxxxxxxxxxx}} \\
 \vspace{0.15in}
 {\bf List of practice problems worked: } \\
 \vspace{0.4in}
