create lewis version of HW report, correctly include from -base.tex file

--- a/homework-report-base.tex
+++ b/homework-report-base.tex
@@ -1,9 +1,6 @@
-\documentclass[letterpaper]{article}
 
-\usepackage{tbil-la}
 
 \usepackage[top=1in,bottom=1in,left=1in,right=1in]{geometry}
-\usepackage{enumerate,hyperref}
 
 \pagestyle{empty}
 \begin{document}
@@ -11,30 +8,47 @@
 
 
 \begin{flushright}
- Name: \underline{\phantom{xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx}}\\
-	\ \\
- Date: \underline{\phantom{xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx}}\\
-\ \\
-Week: \underline{\phantom{xxxxxxxxxxx}}\\
+  Name: \underline{\hspace{3in}}
+
+  \vspace{1em}
+
+  Date: \underline{\hspace{2in}}
 \end{flushright}
+
 \begin{center}
-{\Large \bf Homework Report} \\
-\large \course
+  \Large
+  \textbf{Homework Report}
 \end{center}
 
-%\vspace{0.2in}
+\begin{center}
+  \large \course{} - \prof{}
+\end{center}
 
-\begin{flushleft}
-1) Which standards did we cover in class this week? \\
-\vspace{1in}
-2) Which standards did you practice this week? \\
-\vspace{1in}
-3) Which problems did you work on?  Circle the ones you completed correctly. \\
-\vspace{2in}
-5) Which standards do you plan to practice next week? \\
-\vspace{1in}
-6) Are you planning to come to my office hours to assess a standard next week?  Which standard? \\
-\vspace{1in}
-\end{flushleft}
+\begin{center}
+  Due at the beginning of the first class period each week.
+\end{center}
+
+\begin{enumerate}[1)]
+\item Which standards did we cover in class since the last Homework Report
+      was due?
+
+      \vfill
+\item Which standards did you practice outside of class since the last
+      Homework Report was due?
+
+      \vfill
+\item List the problems you worked on. If you believe your solution demonstrates
+      mastery (would be marked as \masteryMark{}), circle it.
+
+      \vfill\vfill
+\item Which standards from earlier in the semester do you plan to review
+      before the next Homework Report is due?
+
+      \vfill
+\item Which of those standards do you plan on reassessing outside of class
+      before the next Homework Report is due?
+
+      \vfill
+\end{enumerate}
 
 \end{document}
