--- a/homework-report-lewis.tex
+++ b/homework-report-lewis.tex
@@ -2,8 +2,8 @@
 
 \usepackage{tbil-la}
   % \booltrue{TR}\booltrue{TBL}   %Drew's TR TBL
-  % \booltrue{TR}\boolfalse{TBL}  %Drew's TR lecture
+  \booltrue{TR}\boolfalse{TBL}  %Drew's TR lecture
   % \boolfalse{TR}\booltrue{TBL}  %Steven's MW TBL
-  \boolfalse{TR}\boolfalse{TBL} %Steven's MW lecture
+  % \boolfalse{TR}\boolfalse{TBL} %Steven's MW lecture
 
 \input{homework-report-base}
