--- a/syllabus-base.tex
+++ b/syllabus-base.tex
@@ -101,10 +101,10 @@ below 80\%.
     \begin{center}
     \begin{tabular}{l|l}
     Component & Weight \\ \hline \hline
-    iRAT & TBD \\ \hline
-    tRAT & TBD\\ \hline
-    Peer Evaluation & TBD \\ \hline
-    Attendence & TBD\\ \hline
+    iRAT & \ifbool{TR}{15\%}{TBD} \\ \hline
+    tRAT & \ifbool{TR}{25\%}{TBD}\\ \hline
+    Peer Evaluation & \ifbool{TR}{25\%}{TBD} \\ \hline
+    Attendence & \ifbool{TR}{35\%}{TBD}\\ \hline
 
     \end{tabular}
     \end{center}
