Lewis homework report

--- a/homework-report-base.tex
+++ b/homework-report-base.tex
@@ -25,7 +25,7 @@
 \end{center}
 
 \begin{center}
-  Due at the beginning of the first class period each week.
+  Due at the beginning of \ifbool{TR}{class each Thursday}{the first class period each week}.
 \end{center}
 
 \begin{enumerate}[1)]
@@ -37,16 +37,14 @@
       Homework Report was due?
 
       \vfill
-\item List the problems you worked on. If you believe your solution demonstrates
-      mastery (would be marked as \masteryMark{}), circle it.
+\item List the problems you worked on. \ifbool{TR}{Circle the ones you worked correctly.}{If you believe your solution demonstrates mastery (would be marked as \masteryMark{}), circle it.}
 
       \vfill\vfill
 \item Which standards from earlier in the semester do you plan to review
       before the next Homework Report is due?
 
       \vfill
-\item Which of those standards do you plan on reassessing outside of class
-      before the next Homework Report is due?
+\item Which of those standards do you plan on reassessing \ifbool{TR}{in my office hours next week}{outside of class before the next Homework Report is due}?
 
       \vfill
 \end{enumerate}
