tweak homework reports

--- a/syllabus-base.tex
+++ b/syllabus-base.tex
@@ -255,7 +255,7 @@ F 	& \begin{minipage}{0.4\textwidth}
 
 
 \section*{\fontsize{12}{15}\selectfont Homework}
-The only way to learn mathematics is to do mathematics; for this reason, I will regularly provide you with homework problems.  \textbf{These are for your own practice.} You are not asked to hand these in for a grade.  Instead, you are expected to turn in a homework report each week (blank ones are available in USAOnline).  In the report, you will list problems you've worked on for practice, and ones you are still having trouble with.  {\bf Homework reports are due every \ifbool{TR}{Thursday}{Wednesday} at the beginning of class.}  Late homework reports will not be accepted.
+The only way to learn mathematics is to do mathematics; for this reason, I will regularly provide you with homework problems.  \textbf{These are for your own practice.} You are not asked to hand these in for a grade.  Instead, you are expected to turn in a homework report each week (blank ones are available in USAOnline).  In the report, you will list problems you've worked on for practice, and ones you are still having trouble with.  {\bf Homework reports are due \ifbool{TR}{every Thursday}{on the first class day of each week} at the beginning of class.}  Late homework reports will not be accepted.
 
 
 
