10-question RATs for first three modules

--- a/rat/1-e-rat.tex
+++ b/rat/1-e-rat.tex
@@ -2,7 +2,7 @@
 %% This is file, `1-e-rat.tex',
 %% generated with the extract package.
 %% 
-%% Generated on :  2017/08/17,12:19
+%% Generated on :  2017/08/17,14:09
 %% From source  :  readiness.tex
 %% Using options:  active,generate=rat/1-E-RAT.tex,extract-env={readinessAssuranceTest}
 %% 
@@ -24,9 +24,24 @@
 
 \begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
-\item \systemWithOneSolutionA
+\item \systemWithOneSolutionA % correct
 \item \systemWithOneSolutionB
 \item \systemWithInfinitelyManySolutions
+\item \systemWithNoSolutions
+\end{readinessAssuranceTestChoices}
+\end{multicols}
+
+\item Which of these graphs represents the following system of linear equations?
+      \begin{align*}
+      3x+3y   &=   6 \\
+      x+y  &=  2
+      \end{align*}
+
+\begin{multicols}{4}
+\begin{readinessAssuranceTestChoices}
+\item \systemWithOneSolutionA
+\item \systemWithOneSolutionB
+\item \systemWithInfinitelyManySolutions % correct
 \item \systemWithNoSolutions
 \end{readinessAssuranceTestChoices}
 \end{multicols}
@@ -41,7 +56,7 @@
 \begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
 \item Zero
-\item One
+\item One % correct
 \item Two
 \item Infinitely-many
 \end{readinessAssuranceTestChoices}
@@ -60,6 +75,22 @@
 \item Zero
 \item One
 \item Two
+\item Infinitely-many % correct
+\end{readinessAssuranceTestChoices}
+\end{multicols}
+
+
+\item How many solutions are there for the system of linear equations
+      represented by the following graph?
+    \begin{center}
+      \systemWithOneSolutionA
+    \end{center}
+
+\begin{multicols}{4}
+\begin{readinessAssuranceTestChoices}
+\item Zero
+\item One % correct
+\item Two
 \item Infinitely-many
 \end{readinessAssuranceTestChoices}
 \end{multicols}
@@ -67,14 +98,14 @@
 
 \item How many solutions are there for the system of linear equations
       represented by the following graph? (This graph represents two
-      parallel lines.)
+      non-overlapping parallel lines.)
     \begin{center}
       \systemWithNoSolutions
     \end{center}
 
 \begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
-\item Zero
+\item Zero % correct
 \item One
 \item Two
 \item Infinitely-many
@@ -89,20 +120,26 @@
 
 \begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
-\item
-\(x=-1\) and \(y=3\) % TODO
-\item
-\(
-  \begin{bmatrix}
-    x_1 \\
-    x_2
-  \end{bmatrix}=
-  \begin{bmatrix}
-    4 \\
-    -2
-  \end{bmatrix}
-\)
+\item \((x,y)=(-1,3)\) % correct
+\item \((x,y)=(4,-2)\)
 \item There are no solutions.
+\item There are infinitely-many solutions.
+\end{readinessAssuranceTestChoices}
+\end{multicols}
+
+\item Solve the following system of linear equations.
+      \begin{align*}
+      y   &=  3x+5 \\
+      y  &=  3x+2
+      \end{align*}
+
+\begin{multicols}{4}
+\begin{readinessAssuranceTestChoices}
+\item
+\((x,y)=(3,4)\)
+\item
+\((x,y)=(-5,1)\)
+\item There are no solutions. % correct
 \item There are infinitely-many solutions.
 \end{readinessAssuranceTestChoices}
 \end{multicols}
@@ -116,29 +153,28 @@
 \begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
 \item
-\(
-  \begin{bmatrix}
-    x_1 \\
-    x_2
-  \end{bmatrix}=
-  \begin{bmatrix}
-    -1 \\
-    4
-  \end{bmatrix}
-\)
+\((x,y)=(-1,4)\)
 \item
-\(
-  \begin{bmatrix}
-    x_1 \\
-    x_2
-  \end{bmatrix}=
-  \begin{bmatrix}
-    2 \\
-    1
-  \end{bmatrix}
-\)
+\((x,y)=(2,1)\) % correct
 \item There are no solutions.
 \item There are infinitely-many solutions.
+\end{readinessAssuranceTestChoices}
+\end{multicols}
+
+\item Solve the following system of linear equations.
+      \begin{align*}
+      4x-8y   &= 12 \\
+      -6x+12y  &=  18
+      \end{align*}
+
+\begin{multicols}{4}
+\begin{readinessAssuranceTestChoices}
+\item
+\((x,y)=(3,3)\)
+\item
+\((x,y)=(-2,1)\)
+\item There are no solutions.
+\item There are infinitely-many solutions. % correct
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
