--- a/rat/2-v-rat.tex
+++ b/rat/2-v-rat.tex
@@ -2,7 +2,7 @@
 %% This is file, `2-v-rat.tex',
 %% generated with the extract package.
 %% 
-%% Generated on :  2017/08/17,12:19
+%% Generated on :  2017/08/17,14:09
 %% From source  :  readiness.tex
 %% Using options:  active,generate=rat/2-V-RAT.tex,extract-env={readinessAssuranceTest}
 %% 
@@ -33,9 +33,45 @@
 \begin{readinessAssuranceTestChoices}
 \item \(
         \begin{bmatrix}
-          0 \\ 4 \\ -7
+          0 \\ 4 \\ -8
         \end{bmatrix}
       \)
+\item \(
+        \begin{bmatrix}
+          6 \\ -8 \\ -3
+        \end{bmatrix}
+      \) % correct
+\item \(
+        \begin{bmatrix}
+          3 \\ 2 \\ -5
+        \end{bmatrix}
+      \)
+\item \(
+        \begin{bmatrix}
+          -2 \\ 0 \\ 1
+        \end{bmatrix}
+      \)
+\end{readinessAssuranceTestChoices}
+\end{multicols}
+
+\item Simplify the following vector expression.
+  \[
+  2\left(
+  \begin{bmatrix}
+    1 \\ 1 \\ -1
+  \end{bmatrix}+
+  \begin{bmatrix}
+    -1 \\ 1 \\ -3
+  \end{bmatrix}\right)
+  \]
+
+\begin{multicols}{4}
+\begin{readinessAssuranceTestChoices}
+\item \(
+        \begin{bmatrix}
+          0 \\ 4 \\ -8
+        \end{bmatrix}
+      \) % correct
 \item \(
         \begin{bmatrix}
           6 \\ -8 \\ -3
@@ -61,8 +97,30 @@
 \begin{readinessAssuranceTestChoices}
 \item \(3-7i\)
 \item \(4+i\)
-\item \(-2+10i\)
+\item \(-2+10i\) % correct
 \item \(-1-5i\)
+\end{readinessAssuranceTestChoices}
+\end{multicols}
+
+\item Which of these complex numbers might be represented
+      by the following vector
+      plotted on the complex plane (where the horizontal axis gives the
+      real part and the vertical axis gives the imaginary part)?
+
+      \begin{center}
+        \begin{tikzpicture}[scale=0.25]
+        \draw[thin,gray,<->] (-5,0) -- (5,0);
+        \draw[thin,gray,<->] (0,-5) -- (0,5);
+        \draw[thick,blue,->] (0,0) -- (-2,3);
+        \end{tikzpicture}
+      \end{center}
+
+\begin{multicols}{4}
+\begin{readinessAssuranceTestChoices}
+\item \(5+i\)
+\item \(-3-9i\)
+\item \(-2+3i\) % correct
+\item \(4i\)
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
@@ -73,13 +131,223 @@
 \begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
 \item \(x^3+4x-5\)
-\item \(-4x^3-3x^2-2x+23\)
+\item \(-4x^3-3x^2-2x+23\) % correct
 \item \(3x^3+5x^2-3x+17\)
 \item \(-x^3+19x^2-4\)
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
-\item TODO some problems based on module E.
+\item Express the following system of linear equations as an augmented matrix.
+\begin{alignat*}{5}
+  x_1 &\,+\,& 2x_2 &\, \,&     &\,-\,&  x_4 &\,=\,& 3 \\
+      &\, \,&      &\, \,& x_3 &\,+\,& 4x_4 &\,=\,& -2
+\end{alignat*}
+
+\begin{multicols}{4}
+\begin{readinessAssuranceTestChoices}
+\item \(
+      \begin{bmatrix}[c|c]
+        1 & 0 \\
+        2 & 0 \\
+        0 & 1 \\
+        -1 & 4 \\
+        -2 & 3
+      \end{bmatrix}
+    \)
+\item \(
+      \begin{bmatrix}[cccc|c]
+        1 & 2 & 0 & -1 & 3 \\
+        0 & 0 & 1 & 4 & -2
+      \end{bmatrix}
+    \) % correct
+    \item \(
+          \begin{bmatrix}[c|c]
+            1 & 2 \\
+            0 & -1 \\
+            3 & 0 \\
+            0 & 1 \\
+            4 & -2
+          \end{bmatrix}
+        \)
+\item \(
+      \begin{bmatrix}[cccc|c]
+        1 & 2 & 1 & 4 & 3 \\
+        -2 & 1 & 3 & 4 & 5
+      \end{bmatrix}
+    \)
+\end{readinessAssuranceTestChoices}
+\end{multicols}
+
+\item Which of the following matrices is equivalent to the following matrix?
+  \[
+    \begin{bmatrix}[cc|c]
+      1 & 2 & 3 \\
+      0 & 4 & -1 \\
+      2 & 3 & 2 \\
+    \end{bmatrix}
+  \]
+  (Hint: The correct answer was obtained from a single row operation.)
+
+  \begin{multicols}{4}
+  \begin{readinessAssuranceTestChoices}
+  \item
+    \(
+      \begin{bmatrix}[cc|c]
+        1 & 2 & 3 \\
+        0 & 4 & -1 \\
+        0 & 0 & 1 \\
+      \end{bmatrix}
+    \)
+  \item
+    \(
+      \begin{bmatrix}[cc|c]
+        1 & 2 & 3 \\
+        1 & 3 & 4 \\
+        2 & 3 & 2 \\
+      \end{bmatrix}
+    \)
+  \item
+    \(
+      \begin{bmatrix}[cc|c]
+        1 & 2 & 3 \\
+        0 & 1 & 1 \\
+        2 & 3 & 2 \\
+      \end{bmatrix}
+    \)
+  \item
+    \(
+      \begin{bmatrix}[cc|c]
+        1 & 2 & 3 \\
+        0 & 4 & -1 \\
+        0 & -1 & -4 \\
+      \end{bmatrix}
+    \) % correct
+  \end{readinessAssuranceTestChoices}
+  \end{multicols}
+
+\item Find
+  \(\RREF
+    \begin{bmatrix}[cc|c]
+      1 & 2 & 3 \\
+      0 & 4 & -1 \\
+      2 & 3 & 2 \\
+    \end{bmatrix}
+  \).
+
+  \begin{multicols}{4}
+  \begin{readinessAssuranceTestChoices}
+  \item
+    \(
+      \begin{bmatrix}[cc|c]
+        1 & 0 & 3 \\
+        0 & 1 & -1 \\
+        0 & 0 & 0 \\
+      \end{bmatrix}
+    \)
+  \item
+    \(
+      \begin{bmatrix}[cc|c]
+        1 & 2 & 3 \\
+        1 & 3 & 4 \\
+        0 & 0 & 0 \\
+      \end{bmatrix}
+    \)
+  \item
+    \(
+      \begin{bmatrix}[cc|c]
+        1 & 2 & 3 \\
+        0 & 1 & 1 \\
+        0 & 0 & 0 \\
+      \end{bmatrix}
+    \)
+  \item
+    \(
+      \begin{bmatrix}[cc|c]
+        1 & 0 & 0 \\
+        0 & 1 & 0 \\
+        0 & 0 & 1 \\
+      \end{bmatrix}
+    \) % correct
+  \end{readinessAssuranceTestChoices}
+  \end{multicols}
+
+  \item Solve the following system of linear equations.
+  \begin{alignat*}{4}
+    2x_1 &\,+\,& x_2 &\,+\,& 4x_3 &\,=\,& 0 \\
+     x_1 &\,+\,& x_2 &\,+\,&  x_3 &\,=\,& 1 \\
+   -3x_1 &\,+\,& 4x_2 &\,+\,& x_3 &\,=\,& -7 \\
+  \end{alignat*}
+
+  \begin{multicols}{2}
+  \begin{readinessAssuranceTestChoices}
+  \item \(
+          \begin{bmatrix}
+            x_1 \\ x_2 \\ x_3
+          \end{bmatrix}=
+          \begin{bmatrix}
+            2 \\ 0 \\ -1
+          \end{bmatrix}
+        \) % correct
+  \item \(
+          \begin{bmatrix}
+            x_1 \\ x_2 \\ x_3
+          \end{bmatrix}=
+          \begin{bmatrix}
+            1 \\ -6 \\ 1
+          \end{bmatrix}
+        \)
+  \item \(
+          \begin{bmatrix}
+            x_1 \\ x_2 \\ x_3
+          \end{bmatrix}=
+          \begin{bmatrix}
+            1 \\ -2 \\ 1
+          \end{bmatrix}+
+          a
+          \begin{bmatrix}
+            1 \\ 0 \\ 3
+          \end{bmatrix}
+        \) for all real numbers \(a\)
+  \item No solutions
+  \end{readinessAssuranceTestChoices}
+  \end{multicols}
+
+  \item Solve the following system of linear equations.
+  \begin{alignat*}{4}
+    2x_1 &\,+\,& x_2 &\,+\,& 4x_3 &\,=\,& 0 \\
+     x_1 &\,+\,& x_2 &\,+\,&  x_3 &\,=\,& 0 \\
+  \end{alignat*}
+
+  \begin{multicols}{2}
+  \begin{readinessAssuranceTestChoices}
+  \item \(
+          \begin{bmatrix}
+            x_1 \\ x_2 \\ x_3
+          \end{bmatrix}=
+          \begin{bmatrix}
+            4 \\ 1 \\ -5
+          \end{bmatrix}
+        \)
+  \item \(
+          \begin{bmatrix}
+            x_1 \\ x_2 \\ x_3
+          \end{bmatrix}=
+          \begin{bmatrix}
+            1 \\ 2 \\ -1
+          \end{bmatrix}
+        \)
+  \item \(
+          \begin{bmatrix}
+            x_1 \\ x_2 \\ x_3
+          \end{bmatrix}=
+          a
+          \begin{bmatrix}
+            -3 \\ 2 \\ 1
+          \end{bmatrix}
+        \) for all real numbers \(a\) % correct
+  \item No solutions
+  \end{readinessAssuranceTestChoices}
+  \end{multicols}
 
 
 
