--- a/tbil-la.sty
+++ b/tbil-la.sty
@@ -148,7 +148,7 @@
 }
 \newcommand{\profhours}{%
   \ifbool{TR}{%
-    TBA%
+    \begin{minipage}{0.3\textwidth}\ \\M 8-9,2-3; T 11-12; W 8-9 \\ R 2-3; F 12:30-1:30\end{minipage}%
   }{%
     W 10:30-3:30, 5:00-6:00%
   }%
